Fixing spacing on css file

--- a/frontend/src/assets/scss/custom.scss
+++ b/frontend/src/assets/scss/custom.scss
@@ -57,11 +57,11 @@ a {
 	padding-top: 20px;
 
 	input.form-control {
-		margin-top: 10px;
+		margin-top: 2%;
 	}
 
 	button {
-		margin-top: 10px;
+		margin-top: 2%;
 	}
 		
 }
